fix: horizontal scroll

--- a/styles/card.css
+++ b/styles/card.css
@@ -63,8 +63,8 @@
     content: "";
     position: absolute;
     left: 100%;
-    top: 0%;
-    border-width: 8.4px 8px;
+    top: 8%;
+    border-width: 8.5px 8px;
     border-color: rgba(35, 91, 247, 0.7) transparent rgba(35, 91, 247, 0.7) rgba(19, 69, 207, 0.9);
     border-style: solid;
 }
