--- a/styles/components.css
+++ b/styles/components.css
@@ -75,13 +75,13 @@
 section {
     border-bottom: 1px solid grey;
     padding: 1rem;
-    padding-top: 4rem;
-    padding-left: 2rem;
+    padding-top: 2.2rem;
 }
 
 h2,h3 {
-    margin-block-start: 0.4em;
-    margin-block-end: 0.4em;
+    margin-block-start: 0.2em;
+    margin-block-end: 0.2em;
+    padding: 0.3em;
 }
 
 .div-relative {
