--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 #navigation {
-    position: fixed;
+    position: sticky;
     width: 100%;
     z-index: 1;
     top: 0;
@@ -40,46 +40,50 @@ html {
 }
 
 .social-media {
-    width: 120px;
+    width: 75px;
     position: fixed;
     top: 1%;
-    right: 5%;
+    right: 10%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
     justify-content: center;
 }
 
 .media-logo {
-    width: 50%;
+    width: 100%;
 }
 
-.code-frame{
+.code-frame {
     display: none;
 }
 
 
 @media screen and (min-width: 768px) {
-    body {
+    .grid-body {
         display: grid;
         grid-template-areas:
             "nav nav"
             "left-pannel lib-data";
-        grid-template-columns: 1fr 3fr;
-        grid-gap: 2rem;
+        column-gap: 2rem;
     }
 
+    .social-media {
+       position: initial;
+    }
+    
     .left-pannel {
         grid-area: left-pannel;
-        width: 100%;
-        min-width: 350px;
-        border-right: 1px solid var(--primaryBg);
+        width: max-content;
+        border-right: 1px solid var(--primaryBg); 
     }
 
     #list-nav-main {
-        position: fixed;
-        top: 10%;
-        left: 2%;
-        width: 18%;
+        position: sticky;
+        top: 13%;
+        left: 1%;
+        width: max-content;
+        margin: 1rem;
         border: 1px solid var(--primaryBg);
         border-radius: 1rem;
         background-color: var(--theme50);
@@ -87,29 +91,26 @@ html {
 
     .lib-container {
         grid-area: lib-data;
+        width: 100%;
+        overflow-x: hidden;
     }
 
     #list-nav-main>li {
         display: block;
         border: none;
         border-radius: 1rem;
+        padding: 0.5rem 4rem;
     }
 
     .code-frame {
         display: block;
-        margin: 1rem;
-        padding: 1rem;
+        padding: 1.5rem 0;
         position: relative;
         overflow-x: visible;
-        /* padding-top: 56.25%; */
+        max-width: min-content;
     }
 
     .code-frame>iframe {
-        /* position: absolute;
-        top:0;
-        bottom: 0;
-        left:0;
-        right: 0; */
         width: 100%;
         height: 100%;
     }
